fix: dashboard data

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,8 +26,13 @@
           navList.classList.toggle('active');
         });
       }
+      
     });
+    
+    
   </script>
 
+</body>
+</html>
 </body>
 </html>
