--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,10 @@
-<header>
-  <nav class="navbar">
-    <a href="/" class="nav-brand">AppHibrido_v2</a>
+<header class="header-hacker">
+  <nav class="nav-hacker-container">
+    <a href="/" class="logo nav-brand">AppHibrido_v2</a>
     
-    <div class="menu-toggle" id="menu-toggle">&#9776;</div> <ul class="nav-list" id="nav-list">
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div> 
+    
+    <ul class="nav-hacker-list" id="nav-list">
       <li class="nav-item">
         <a href="/" class="nav-link <%= titulo === 'Página Inicial' ? 'active' : '' %>">Início</a>
       </li>
@@ -10,7 +12,7 @@
         <a href="/tarefas" class="nav-link <%= titulo === 'Lista de Tarefas' ? 'active' : '' %>">Tarefas</a>
       </li>
       <li class="nav-item">
-        <a href="/projetos" class="nav-link <%= titulo === 'Projetos' ? 'active' : '' %>">Projetos</a>
+    <a href="/projetos" class="nav-link <%= titulo === 'Projetos' ? 'active' : '' %>">Projetos</a>
       </li>
       <li class="nav-item">
         <a href="/dashboard" class="nav-link <%= titulo === 'Dashboard' ? 'active' : '' %>">Dashboard</a>
